Fixed wrapping issues on search

--- a/front_end/styles/search_module/search-keywords.css
+++ b/front_end/styles/search_module/search-keywords.css
@@ -9,6 +9,11 @@
   text-align: center;
 }
 
+.content-span {
+  width: 100%;
+  word-wrap: break-word;
+}
+
 .recClass a {
     height: 80%; 
   width: 80%; 
